run project with gradle cli