@@ -2,6 +2,7 @@ plugins {
     id "idea"
     id "java"
     id "io.freefair.lombok" version "5.3.0"
+    id "application"
 }
 
 java {
@@ -37,4 +38,10 @@ test {
     useJUnitPlatform {
         jvmArgs += "--enable-preview"
     }
+}
+
+run {
+    main = "org.acme.game.GameApp"
+    jvmArgs += "--enable-preview"
+    standardInput = System.in
 }
